<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:layout_behavior="ui.behaviors.CustomNestedScrollBehavior">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing_small_8"
            android:layout_marginBottom="@dimen/spacing_small_8"
            android:orientation="horizontal">

            <ImageView
                style="@style/icon.left"
                android:src="@drawable/ic_baseline_call_24" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="@dimen/size_large_72"
                android:layout_marginStart="@dimen/spacing_medium_32"
                android:layout_marginEnd="@dimen/spacing_normal_16"
                android:layout_weight="1"
                android:gravity="bottom"
                android:orientation="vertical">

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/et_phone"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:backgroundTint="@color/white"
                        android:enabled="false"
                        android:focusable="false"
                        android:fontFamily="sans-serif-condensed-medium"
                        android:hint="@string/profile_phone_hint"
                        android:inputType="phone"
                        android:text="@string/profile_phone_dummy"
                        android:textColor="@color/black"
                        android:textColorHint="@color/grey"
                        android:textSize="@dimen/font_small_12" />
                </com.google.android.material.textfield.TextInputLayout>

            </LinearLayout>

            <ImageView
                android:id="@+id/iv_call"
                style="@style/icon.right"
                android:src="@drawable/ic_baseline_phone_in_talk_24" />

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/line_size_1"
            android:layout_marginStart="@dimen/spacing_larger_72"
            android:background="@color/grey_light" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing_small_8"
            android:layout_marginBottom="@dimen/spacing_small_8"
            android:orientation="horizontal">

            <ImageView
                style="@style/icon.left"
                android:src="@drawable/ic_baseline_email_24" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="@dimen/size_large_72"
                android:layout_marginStart="@dimen/spacing_medium_32"
                android:layout_marginEnd="@dimen/spacing_normal_16"
                android:layout_weight="1"
                android:gravity="bottom"
                android:orientation="vertical">

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/et_email"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:backgroundTint="@color/white"
                        android:enabled="false"
                        android:focusable="false"
                        android:fontFamily="sans-serif-condensed-medium"
                        android:hint="@string/profile_mail_hint"
                        android:inputType="textEmailAddress"
                        android:text="@string/profile_mail_dummy"
                        android:textColor="@color/black"
                        android:textColorHint="@color/grey"
                        android:textSize="@dimen/font_small_12" />
                </com.google.android.material.textfield.TextInputLayout>

            </LinearLayout>

            <ImageView
                style="@style/icon.right"
                android:src="@drawable/ic_baseline_send_24" />

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/line_size_1"
            android:layout_marginStart="@dimen/spacing_larger_72"
            android:background="@color/grey_light" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing_small_8"
            android:layout_marginBottom="@dimen/spacing_small_8"
            android:orientation="horizontal">

            <ImageView
                style="@style/icon.left"
                android:src="@drawable/ic_fb_24" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="@dimen/size_large_72"
                android:layout_marginStart="@dimen/spacing_medium_32"
                android:layout_marginEnd="@dimen/spacing_normal_16"
                android:layout_weight="1"
                android:gravity="bottom"
                android:orientation="vertical">

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/et_facebook"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:backgroundTint="@color/white"
                        android:enabled="false"
                        android:focusable="false"
                        android:fontFamily="sans-serif-condensed-medium"
                        android:hint="@string/profile_facebook_hint"
                        android:inputType="textWebEditText"
                        android:text="@string/profile_facebook_dummy"
                        android:textColor="@color/black"
                        android:textColorHint="@color/grey"
                        android:textSize="@dimen/font_small_12" />
                </com.google.android.material.textfield.TextInputLayout>

            </LinearLayout>

            <ImageView
                style="@style/icon.right"
                android:src="@drawable/ic_baseline_visibility_24" />

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/line_size_1"
            android:layout_marginStart="@dimen/spacing_larger_72"
            android:background="@color/grey_light" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing_small_8"
            android:layout_marginBottom="@dimen/spacing_small_8"
            android:orientation="horizontal">

            <ImageView
                style="@style/icon.left"
                android:src="@drawable/ic_github" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="@dimen/size_large_72"
                android:layout_marginStart="@dimen/spacing_medium_32"
                android:layout_marginEnd="@dimen/spacing_normal_16"
                android:layout_weight="1"
                android:gravity="bottom"
                android:orientation="vertical">

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/et_github"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:backgroundTint="@color/white"
                        android:enabled="false"
                        android:focusable="false"
                        android:fontFamily="sans-serif-condensed-medium"
                        android:hint="@string/profile_github_hint"
                        android:inputType="textEmailAddress"
                        android:text="@string/profile_github_dummy"
                        android:textColor="@color/black"
                        android:textColorHint="@color/grey"
                        android:textSize="@dimen/font_small_12" />
                </com.google.android.material.textfield.TextInputLayout>

            </LinearLayout>

            <ImageView
                style="@style/icon.right"
                android:src="@drawable/ic_baseline_visibility_24" />

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/line_size_1"
            android:layout_marginStart="@dimen/spacing_larger_72"
            android:background="@color/grey_light" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing_small_8"
            android:layout_marginBottom="@dimen/spacing_small_8"
            android:orientation="horizontal">

            <ImageView
                style="@style/icon.left"
                android:src="@drawable/ic_baseline_account_circle_grey_24" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="@dimen/size_large_72"
                android:layout_marginStart="@dimen/spacing_medium_32"
                android:layout_marginEnd="@dimen/spacing_normal_16"
                android:layout_weight="1"
                android:gravity="bottom"
                android:orientation="vertical">

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/et_about"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:backgroundTint="@color/white"
                        android:enabled="false"
                        android:focusable="false"
                        android:fontFamily="sans-serif-condensed-medium"
                        android:hint="@string/profile_about_hint"
                        android:inputType="textWebEditText"
                        android:text="@string/profile_about_dummy"
                        android:textColor="@color/black"
                        android:textColorHint="@color/grey"
                        android:textSize="@dimen/font_small_12" />
                </com.google.android.material.textfield.TextInputLayout>

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

</androidx.core.widget.NestedScrollView>
